SCNATLASSIANDEV-11 - fixed logtime plugin.